--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-node_modules/
-build/
-dist/
-coverage/
-.DS_Store
+node_modules
+dist
+.env
+trana.db
 *.log
-.env*
-!.env.example
+.vite
+.env
+.env.local
