--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-node_modules
-dist
-trana.db
+node_modules/
+build/
+dist/
+coverage/
+.DS_Store
 *.log
-.vite
-.env
-.env.local
+.env*
+!.env.example
